// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render the component with a custom image 1`] = `
<img
  alt="Product Img"
  className="productImg + undefined"
  src="https:\\\\\\\\hola.jpg"
/>
`;

exports[`ProductImage should show the component with the product image 1`] = `
<div
  className="productCard + undefined"
>
  <img
    alt="Product Img"
    className="productImg + undefined"
    src="./coffee-mug.png"
  />
</div>
`;
